[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ha-artnet-led"
description = "Home Assistant custom integration for Art-Net and sACN DMX lighting control"
authors = [{name = "ha-artnet-led contributors"}]
license = {text = "GPLv3"}
requires-python = ">=3.13.2"
version = "1.0.0"

[project.optional-dependencies]
dev = [
    "ruff",
    "black", 
    "mypy==1.17.1",
    "pytest",
    "pytest-asyncio",
    "pytest-cov",
    "netifaces",
    "homeassistant-stubs==2025.9.1",
]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["custom_components*"]

# Ruff - Fast Python linter (linting only)
[tool.ruff]
line-length = 120
target-version = "py312"
exclude = [".git", ".venv", "__pycache__", "build", "dist", "deploy_staging.py"]

[tool.ruff.lint]
select = [
    "E", "W",    # pycodestyle
    "F",         # pyflakes
    "UP",        # pyupgrade
    "B",         # flake8-bugbear
    "I",         # isort
    "N",         # pep8-naming
    "S",         # flake8-bandit
    "C4",        # flake8-comprehensions
    "SIM",       # flake8-simplify
    "RUF",       # ruff-specific
]
ignore = [
    "S101",      # assert allowed in tests
    "S311",      # random is OK for non-crypto use
    "N999",      # allow fixture library naming
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101"]  # Allow asserts in tests

[tool.ruff.lint.isort]
known-first-party = ["custom_components.dmx"]

# Black - Code formatter
[tool.black]
line-length = 120
target-version = ['py312']
skip-string-normalization = false

# MyPy - Type checker
[tool.mypy]
python_version = "3.13"
strict = true
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["tests.*"]
disallow_untyped_defs = false

# Pytest - Testing framework
[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = ["--tb=short"]
asyncio_mode = "auto"